# inventory-management-system

./: .env  pyproject.toml
app/: database.py  main.py  models.py
app/routers/: category.py  employees.py  order.py  product.py  purchase_order.py  stock.py  supplier.py  vendor.py
app/schemas/: auth.py  category.py  employee.py  order.py  product.py  purchase_order.py  stock.py  supplier.py  vendor.py
